fix: center align action text

--- a/client/src/module/bookmarks/component/MultiBookActionBar/MultiBookActionBar.scss
+++ b/client/src/module/bookmarks/component/MultiBookActionBar/MultiBookActionBar.scss
@@ -6,6 +6,8 @@
 
 .multi-book-action-text {
   position: relative;
+  display: flex;
+  align-items: center;
   font-size: 18px;
 }
 
